@@ -47,6 +47,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [PKG_UPGRADE] Avoid trying to launch upgrade scripts when node is not bootstrapped
 - [GUI] [ACLS] Improve 'Used by' presentation of Wokrflows using ACLs
+- [GUI] [FRONTEND] Prevent mode modification if Frontend is linked to a Workflow/IDP
+- [GUI] [BACKEND] Prevent mode modification if Backend is linked to a Workflow
 - [CODE] [CLEAN] Minor corrections
 - [SSO_CLIENT] [COOKIES] Fix cookies' banning when receiving application's response
 - [SSO_CLIENT] [COOKIES] Correctly check the 'HttpOnly' attribute set from application's response
